TEIIDTOOLS-142: Fixes text bleeding from navbar
* Ensures the navbar container has a defined minimum width which cannot be
  shrunk

* Using overflow-x allows the same affect as float:left but does not require
  a width parameter so effectively lays out the content using all the
  remaining space.

--- a/vdb-bench-assembly/plugins/vdb-bench-dataservice/content/css/styles.less
+++ b/vdb-bench-assembly/plugins/vdb-bench-dataservice/content/css/styles.less
@@ -30,13 +30,14 @@
 }
 
 .ds-navbar-container {
+    width: 8em;
+    min-width: 8em;
     float: left;
-    width: 6%;
 }
 
 .ds-navbar-contents {
-    float: left;
-    width: 94%;
+    margin-left: 8em;
+    overflow-x: auto;
 }
 
 /*
